    - Modify all bin/ scripts to use POD as their help output, move help() to TestRail::Utils
    - Modify all bin/ scripts to parse all the ~/.testrailrc options
    - Fix an issue where statusNamesToIDs would return status IDs in the wrong order.
    - Re-factor to use Type::Tiny parameter checking.
    - Fix getCaseTypeByName, it's apparently been broken/noncovered this whole time

0.028 2015-06-16 TEODESIAN
    - Hotfix: forgot to include a module in the prove plugin.  How did this pass compile.t? A mystery.
    - Fix an issue where testrail-report incorrectly identified (or failed to identify) the file tested.
    - Add character encoding support to TestRail::API and all its callers (default to utf8)

0.027 2015-06-14 TEODESIAN
    - If no tests are run (environment fail), set test status to 'retest' on non case-per-ok tests
    - If the only oddities in a test are passing TODO tests, mark entire run as TODO PASS.
    - Fix issue where having a ~/.testrailrc would prevent make test from allowing install by cpan client
    - Fix issue where specifying sections past the first defined in a project would fail to restrict spawning to said sections
    - Add Plan Summarizer function
    - Always append the full raw TAP to all results
    - Add closePlan and closeRun functions to TestRail::API
    - Add option to binaries, plugin to close plan/run if no untested/retest exist at end of TAP parse

0.026 2015-06-06 TEODESIAN
    - Add --no-match option to testrail-tests to find orphan tests in a tree
    - Upload full raw results to TestRail when not in step_results or case_per_ok mode
    - Add ability to pass section IDs to discriminate when spawning runs in Test::Rail::Parser
    - Add ability to pass section names to App::Prove::Plugin::TestRail and testrail-report when spawning runs.
    - Add sectionNamesToIds convenience method to TestRail::API

0.025 2015-05-21 TEODESIAN
    - Fix test failures on windows (and an issue in testrail-tests on win32)